--- a/kubernetes/ingress.yaml
+++ b/kubernetes/ingress.yaml
@@ -12,7 +12,7 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: nginx
+  name: ingress
   namespace: kim
   annotations:
     kubernetes.io/ingress.class: "traefik"
@@ -20,14 +20,14 @@ metadata:
     ingress.kubernetes.io/protocol: http
     # redirect inbound http -> https
     traefik.ingress.kubernetes.io/redirect-entry-point: https 
-    cert-manager.io/cluster-issuer: "letsencrypt-prod"
+#   cert-manager.io/cluster-issuer: "letsencrypt-prod"
 #   traefik.ingress.kubernetes.io/router.middlewares: kim-redirect-https@kubernetescrd
 spec:
   tls:
   - hosts:
     - kimlauritsen.com
     - kimlauritsen.org
-    secretName: tls-secret
+    secretName: tls-secret-prod
   rules:
 
     - host: kimlauritsen.org
